styles/main.css
/**
 * Copyright 2015 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* Adding in template presets */

 main, #messages-card {
  height: 100%;
  padding-bottom: 0;
}

#messages-card-container {
  height: calc(100% - 150px);
  padding-bottom: 0;
}

#messages-card {
  margin-top: 15px;
}

.mdl-layout__header-row span {
  margin-left: 15px;
  margin-top: 17px;
}
.mdl-grid {
  max-width: 1024px;
  margin: auto;
}
.material-icons {
  font-size: 30px;
  top: 1px;
  position: relative;
}
.mdl-layout__header-row {
  padding: 0;
  margin: 0 auto;
}
.mdl-card__supporting-text {
  width: auto;
  height: 100%;
  padding-top: 0;
  padding-bottom: 0;
}
#messages {
  overflow-y: auto;
  margin-bottom: 10px;
  height: calc(100% - 80px);
}
#message-filler {
  flex-grow: 1;
}
.message-container:first-of-type {
  border-top-width: 0;
}
.message-container {
  display: block;
  margin-top: 10px;
  border-top: 1px solid #f3f3f3;
  padding-top: 10px;
  opacity: 0;
  transition: opacity 1s ease-in-out;
}
.message-container.visible {
  opacity: 1;
}
.message-container .pic {
  background-image: url('/images/profile_placeholder.png');
  background-repeat: no-repeat;
  width: 30px;
  height: 30px;
  background-size: 30px;
  border-radius: 20px;
}
.message-container .spacing {
  display: table-cell;
  vertical-align: top;
}
.message-container .message {
  display: table-cell;
  width: calc(100% - 40px);
  padding: 5px 0 5px 10px;
}
.message-container .name {
  display: inline-block;
  width: 100%;
  padding-left: 40px;
  color: #bbb;
  font-style: italic;
  font-size: 12px;
  box-sizing: border-box;
}

.mdl-card {
  min-height: 0;

}
.mdl-card {
  background: linear-gradient(white, #f9f9f9);
  justify-content: space-between;
}

/* DoWhop Chat-specific Customizations below: */

#when-column-bounds {
  background-color: eggshell;
  display: flex;
  justify-content: space-around;
  padding: 5%;
  margin: auto;
 }

/* Adding Google map styling: */

/*#where-column-bounds {
  display: flex;
  justify-content: center;
}*/

#map {   /* <-- Always best to set the map height div explicitly. */
  height: 250px;
  width: 600px;
}

#description {
 font-family: Roboto;
 font-size: 15px;
 font-weight: 300;
}

#infowindow-content .title {
 font-weight: bold;
}

#infowindow-content {
 display: none;
}

#map #infowindow-content {
 display: inline;
}

.pac-card {
 margin: 10px 10px 0 0;
 border-radius: 2px 0 0 2px;
 box-sizing: border-box;
 -moz-box-sizing: border-box;
 outline: none;
 box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 background-color: #fff;
 font-family: Roboto;
}

#pac-container {
 padding-bottom: 12px;
 margin-right: 12px;
}

.pac-controls {
 display: inline-block;
 padding: 5px 11px;
}

.pac-controls label {
 font-family: Roboto;
 font-size: 13px;
 font-weight: 300;
}

#pac-input {
 background-color: #fff;
 font-family: Roboto;
 font-size: 15px;
 font-weight: 300;
 margin-left: 12px;
 padding: 0 11px 0 13px;
 text-overflow: ellipsis;
 width: 400px;
}

#pac-input:focus {
 border-color: #4d90fe;
}

#title {
 color: #fff;
 background-color: #4d90fe;
 font-size: 25px;
 font-weight: 500;
 padding: 6px 12px;
}

#target {
 width: 345px;
}

/* Added-on styling details */

h1,h2,h3,h4,h5 { font-family: Avenir }

#image-form {
  padding-top: 7%;
  /*padding-bottom: 10%;*/
}

#create-new-chat {
  padding-right: 10%;
  padding-left: 10%;
}

#show-chat-data {
  padding: 2%;
  background-color: #F6F6F6;
}

#when-icon {
  width: 10%;
  height: 10%;
  padding-top: 2%;
}

#where-icon {
  width: 10%;
  height: 10%;
  padding-top: 2%;
  padding-bottom: 2%;
}

.dowhop-button {
  width: 100%;
}

/* Phone-demo sizing additions (optimized for 450px) */

#messages-card-container, #chat-list-container, #show-chat-data-form, #create-new-chat {
  padding-right: 10%;
  padding-left: 10%;
  padding-top: 2%;
  padding-bottom: 2%;
}

#messages-card-container {
  padding-bottom: 5%; /* <-- Customizing here to encourage focus on messages. */
}

#message-form-div {
  padding: 0%;
  width: 100%;
}

/* Harmonizing Googls Maps input field with theme */

#pac-input {
  position: 0;
  transition: 0.2s ease all;
}
#pac-input:focus {
  border-color: red;
  border-width: 2px;

}

/* Be sure to update upon style guide changes */

#hover-flag, #top-bar-hidden, #top-bar-dowhop {
  background-color: #FF0404;
}

#new-chat-popup {
  display: flex;
  justify-content: center;
  color: blue;
}

.pending-notification {
  color: red;
  font-size: 1em;
  background-color: #ECECEC;
}

.approval-form {
  background-color: lightGrey;
}

/* Styling message input area */

/*[class*='options-'] {
  float: left;
}

.options-div-where {
  width: 20%;
}

.options-div-when {
  width: 20%;
}

.options-div-submit {
  width: 10%;
}

.options-div-image {
  width: 40%;
}*/

/*.file {
  opacity: 0;
  position: absolute;
	margin-left: 25px;
  padding: 10px;
  z-index: 2;
	width: 25px;
	height: 10px;
}*/

.file_button {
  margin-left: 40px;
}

/*#whenDatePending {
	position: absolute;
	right: 30px;
	opacity: 0;
}*/

.options {
  display: block;
}

.underbar {
	padding-top: 5px;
	height: 15px;
	transition: all 1s ease-in-out;
}

.underbar div {
	float: left;
	width: 19%;
}

.underbar_options div {
	float: left;
	width: 100%;
	text-align: center;
	transition: hidden 1s ease-in-out;
}

/*.slideDown {
	transform: translateY(30px);
}
.slideUp {
	transform: translateY(-30px);
}*/
#map-2 {
  /*float: right;*/
  width: auto;
  height: auto;
}

.options-div-submit {
  padding: 0;
  margin: 0;
  width: auto;
  height: auto;
}

#hidden-inputs {
  display: flex;
  justify-content: center;
  padding-top: 5%;
  font-size: 2em;
}

